@@ -36,7 +36,7 @@ Example
 #define ENPHASE_API_PRODUCTION_INVERTERS "{ip}/api/v1/production/inverters"
 #define ENPHASE_API_POWER_GET "{ip}/ivp/mod/603980032/mode/power"
 #define ENPHASE_API_POWER_SET "{ip}/ivp/mod/603980032/mode/power"
-#define ENPHASE_API_INST_DETAILS "{ip}ivp/peb/devstatus"
+#define ENPHASE_API_INST_DETAILS "{ip}/ivp/peb/devstatus"
 #define ENPAHSE_API_INVENTORY_DETAILS "{ip}/ivp/ensemble/inventory"
 
 #ifdef DEBUG_EnphaseAPI_W
@@ -86,13 +86,24 @@ std::string ReadFile(std::string filename)
 }
 #endif
 
-EnphaseAPI::EnphaseAPI(const int ID, const std::string& IPAddress, const unsigned short usIPPort, int PollInterval, const bool bPollInverters, const bool bDontGetMeteredValues, const std::string& szUsername, const std::string& szPassword, const std::string& szSiteID) :
+EnphaseAPI::EnphaseAPI(
+	const int ID,
+	const std::string& IPAddress,
+	const unsigned short usIPPort,
+	int PollInterval,
+	const bool bPollInverters,
+	const bool iInverterDetails,
+	const bool bDontGetMeteredValues,
+	const std::string& szUsername,
+	const std::string& szPassword,
+	const std::string& szSiteID) :
 	m_szIPAddress(IPAddress),
 	m_szUsername(szUsername),
 	m_szPassword(CURLEncode::URLEncode(szPassword)),
 	m_szSiteID(szSiteID)
 {
 	m_bGetInverterDetails = bPollInverters;
+	iInverterDetailsLevel = iInverterDetails;
 	m_bDontGetMeteredValues = bDontGetMeteredValues;
 
 	m_HwdID = ID;
@@ -228,6 +239,17 @@ void EnphaseAPI::Do_Work()
 					if (m_bGetInverterDetails)
 					{
 						getInverterDetails();
+
+						if (iInverterDetailsLevel > 0)
+						{
+							if (!m_szSiteID.empty())
+							{
+								if (getDevStatusDetails(result))
+								{
+									parseDevStatus(result);
+								}
+							}
+						}
 					}
 				}
 				else
@@ -563,7 +585,7 @@ bool EnphaseAPI::GetOwnerToken()
 	{
 		Log(LOG_ERROR, "Invalid data received! (no session_id)");
 		return false;
-}
+	}
 
 	std::string session_id = root["session_id"].asString();
 
@@ -632,7 +654,7 @@ bool EnphaseAPI::GetInstallerToken()
 	{
 		Log(LOG_ERROR, "You need to supply a username/password!");
 		return false;
-	}
+}
 #ifdef DEBUG_EnphaseAPI_R
 	sResult = ReadFile("E:\\EnphaseAPI_login_entrez.json");
 #else
@@ -654,7 +676,7 @@ bool EnphaseAPI::GetInstallerToken()
 	{
 		Log(LOG_ERROR, "Error getting http data! (login)");
 		return false;
-}
+	}
 #ifdef DEBUG_EnphaseAPI_W
 	SaveString2Disk(sResult, "E:\\EnphaseAPI_login_entrez.json");
 #endif
@@ -1031,13 +1053,142 @@ void EnphaseAPI::parseInventory(const Json::Value& root)
 				std::string temperature = itt["temperature"].asString();
 
 				iDeviceIndex++;
+			}
 		}
-	}
 		else
 		{
 			//unknown type
 		}
 		iInventoryIndex++;
+	}
+}
+
+bool EnphaseAPI::getDevStatusDetails(Json::Value& result)
+{
+	std::string sResult;
+
+#ifdef DEBUG_EnphaseAPI_R
+	sResult = ReadFile("E:\\EnphaseAPI_devstatus.json");
+#else
+	//if (m_szTokenInstaller.empty())
+		//return false;
+
+	if (!NeedToken())
+		return false; //only available on firmware V7 and higher
+
+	if (!CheckAuthJWT(m_szTokenInstaller, false))
+	{
+		//we probably need to get a new token
+		if (!GetInstallerToken())
+			return false;
+		if (!CheckAuthJWT(m_szTokenInstaller, true))
+		{
+			return false;
+		}
+	}
+
+	std::vector<std::string> ExtraHeaders;
+	if (!m_szToken.empty()) {
+		ExtraHeaders.push_back("Authorization: Bearer " + m_szTokenInstaller);
+		ExtraHeaders.push_back("Content-Type:application/json");
+	}
+
+	if (!HTTPClient::GET(MakeURL(ENPHASE_API_INST_DETAILS), ExtraHeaders, sResult))
+	{
+		Log(LOG_ERROR, "Error getting http data! (devstatus)");
+		return false;
+	}
+#ifdef DEBUG_EnphaseAPI_W
+	SaveString2Disk(sResult, "E:\\EnphaseAPI_devstatus.json");
+#endif
+#endif
+	Debug(DEBUG_RECEIVED, "devstatus: %s", sResult.c_str());
+
+	bool ret = ParseJSon(sResult, result);
+	if ((!ret) || (!result.isObject()))
+	{
+		m_szToken.clear();
+		Log(LOG_ERROR, "Invalid data received! (devstatus/json)");
+		return false;
+	}
+	if (result.size() < 1)
+		return false;
+
+	if (
+		(result["counters"].empty())
+		&& (result["pcu"].empty())
+		)
+	{
+		if (m_bHaveDevStatus)
+		{
+			m_szToken.clear();
+			Log(LOG_ERROR, "Invalid (no) data received (devstatus, objects not found)");
+		}
+		return false;
+	}
+	m_bHaveDevStatus = true;
+	return true;
+}
+
+void EnphaseAPI::parseDevStatus(const Json::Value& root)
+{
+	if (root["pcu"].empty())
+	{
+		return;
+	}
+	const Json::Value& rFields = root["pcu"]["fields"];
+	const Json::Value& rValues = root["pcu"]["values"];
+
+	std::vector<std::string> vFields;
+	for (const auto& itt : rFields)
+	{
+		vFields.push_back(itt.asString());
+	}
+
+	int dIndex = 1;
+	for (const auto& itt : rValues)
+	{
+		std::map<std::string, std::string> mValues;
+
+		int iIndex = 0;
+		for (const auto& it : itt)
+		{
+			mValues[vFields[iIndex]] = it.asString();
+			iIndex++;
+		}
+
+		std::string serialNumber = mValues["serialNumber"];
+		int devType = atoi(mValues["devType"].c_str());
+
+		if (devType != 1)
+			continue; // only inverters
+
+		bool communicating = (mValues["communicating"] == "true");
+		bool recent = (mValues["recent"] == "true");
+		bool producing = (mValues["producing"] == "true");
+		time_t reportDate = atol(mValues["reportDate"].c_str());
+
+		float temperature = std::stof(mValues["temperature"]);
+
+		float dcVoltageINmV = std::stof(mValues["dcVoltageINmV"]) / 1000.0F;
+		float dcCurrentINmA = std::stof(mValues["dcCurrentINmA"]) / 1000.0F;
+		float acVoltageINmV = std::stof(mValues["acVoltageINmV"]) / 1000.0F;
+		float acPowerINmW = std::stof(mValues["acPowerINmW"]) / 1000.0F;
+
+		std::string szDeviceID = serialNumber;
+		std::string sDeviceName = "Inv " + serialNumber;
+
+		SendTempSensor(dIndex, 255, temperature, sDeviceName + " Temp");
+
+		UpdateValueInt(szDeviceID.c_str(), 1, pTypeGeneral, sTypeVoltage, 12, 255, 0, std_format("%.3f", dcVoltageINmV).c_str(), sDeviceName + " dcVolt");
+		UpdateValueInt(szDeviceID.c_str(), 2, pTypeGeneral, sTypeVoltage, 12, 255, 0, std_format("%.3f", acVoltageINmV).c_str(), sDeviceName + " acVolt");
+
+		struct tm ltime;
+		localtime_r(&reportDate, &ltime);
+		std::string szTime = std_format("%04d-%02d-%02d %02d:%02d:%02d", ltime.tm_year + 1900, ltime.tm_mon + 1, ltime.tm_mday, ltime.tm_hour, ltime.tm_min, ltime.tm_sec);
+		UpdateValueInt(szDeviceID.c_str(), 1, pTypeGeneral, sTypeTextStatus, 12, 255, 0, szTime.c_str(), sDeviceName + " lastUpdate");
+
+		dIndex++;
 	}
 }
 
@@ -1293,6 +1444,6 @@ bool EnphaseAPI::getInverterDetails()
 			// Update
 			UpdateValueInt(szDeviceID.c_str(), 1, devType, subType, 12, 255, nValue, sValue.c_str(), result[0][0]);
 		}
-	}
+		}
 	return true;
-}
+	}
