@@ -12,7 +12,17 @@ namespace Json
 class EnphaseAPI : public CDomoticzHardwareBase
 {
 public:
-	EnphaseAPI(int ID, const std::string& IPAddress, unsigned short usIPPort, int PollInterval, const bool bPollInverters, const bool bDontGetMeteredValues, const std::string& szUsername, const std::string& szPassword, const std::string &szSiteID);
+	EnphaseAPI(
+		int ID,
+		const std::string& IPAddress,
+		unsigned short usIPPort,
+		int PollInterval,
+		const bool bPollInverters,
+		const bool iInverterDetails,
+		const bool bDontGetMeteredValues,
+		const std::string& szUsername,
+		const std::string& szPassword,
+		const std::string &szSiteID);
 	~EnphaseAPI() override = default;
 	bool WriteToHardware(const char* pdata, unsigned char length) override;
 	std::string m_szSoftwareVersion;
@@ -29,11 +39,14 @@ private:
 	bool getPowerStatus();
 	bool getInverterDetails();
 	bool getInventoryDetails(Json::Value& result);
+	bool getDevStatusDetails(Json::Value& result);
 
 	void parseProduction(const Json::Value& root);
 	void parseConsumption(const Json::Value& root);
 	void parseStorage(const Json::Value& root);
 	void parseInventory(const Json::Value& root);
+	void parseDevStatus(const Json::Value& root);
+
 	bool SetPowerActive(const bool bActive);
 
 	bool CheckAuthJWT(const std::string& szToken, const bool bDisplayErrors);
@@ -62,6 +75,7 @@ private:
 
 	bool m_bGetInverterDetails = false;
 	bool m_bDontGetMeteredValues = false;
+	int iInverterDetailsLevel = 0;
 
 	bool m_bHaveConsumption = false;
 	bool m_bHaveNetConsumption = false;
@@ -71,6 +85,8 @@ private:
 
 	bool m_bCheckedInventory = false;
 	bool m_bHaveInventory = false;
+
+	bool m_bHaveDevStatus = false;
 
 	CounterHelper m_ProductionCounter;
 
